--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "vscode-textmate",
-  "version": "9.0.0",
+  "version": "0.0.1",
   "description": "VSCode TextMate grammar helpers",
   "author": {
-    "name": "Microsoft Corporation"
+    "name": "Nikola Hristov",
+    "email": "nikola@nikolahristov.tech",
+    "url": "https://nikolahristov.tech"
   },
   "main": "./release/main.js",
   "typings": "./release/main.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/microsoft/vscode-textmate"
+    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/microsoft/vscode-textmate/issues"
+    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
   },
   "scripts": {
     "watch": "tsc --watch",
@@ -24,7 +26,7 @@
     "tmconvert": "node scripts/tmconvert.js",
     "version": "npm run compile && npm run test",
     "postversion": "git push && git push --tags",
-    "prepublishOnly": "tsc && webpack --progress",
+    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts",
     "bundle": "webpack"
   },
   "devDependencies": {
@@ -35,6 +37,13 @@
     "typescript": "5.2.2",
     "vscode-oniguruma": "2.0.1",
     "webpack": "5.89.0",
-    "webpack-cli": "5.1.4"
+    "webpack-cli": "5.1.4",
+    "typescript-esbuild": "0.3.1"
+  },
+  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
+  "type": "module",
+  "private": "false",
+  "publishConfig": {
+    "access": "public"
   }
 }
