--- a/package.json
+++ b/package.json
@@ -1,40 +1,48 @@
 {
-  "name": "vscode-textmate",
-  "version": "9.0.0",
-  "description": "VSCode TextMate grammar helpers",
-  "author": {
-    "name": "Microsoft Corporation"
-  },
-  "main": "./release/main.js",
-  "typings": "./release/main.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/microsoft/vscode-textmate"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/microsoft/vscode-textmate/issues"
-  },
-  "scripts": {
-    "watch": "tsc --watch",
-    "compile": "tsc",
-    "test": "mocha --ui=tdd ./out/tests/all.test.js",
-    "benchmark": "node benchmark/benchmark.js",
-    "inspect": "node out/tests/inspect.js",
-    "tmconvert": "node scripts/tmconvert.js",
-    "version": "npm run compile && npm run test",
-    "postversion": "git push && git push --tags",
-    "prepublishOnly": "tsc && webpack --progress",
-    "bundle": "webpack"
-  },
-  "devDependencies": {
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^16.6.1",
-    "copy-webpack-plugin": "^9.1.0",
-    "mocha": "^9.2.2",
-    "typescript": "^4.3.5",
-    "vscode-oniguruma": "^1.5.1",
-    "webpack": "^5.50.0",
-    "webpack-cli": "^4.8.0"
-  }
+	"name": "vscode-textmate",
+	"version": "0.0.1",
+	"private": false,
+	"description": "VSCode TextMate grammar helpers",
+	"homepage": "https://github.com/CodeEditorLand/Foundation#readme",
+	"bugs": {
+		"url": "https://github.com/CodeEditorLand/Foundation/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/CodeEditorLand/Foundation.git"
+	},
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "Playform",
+		"email": "Hello@Playform.Cloud",
+		"url": "https://playform.cloud"
+	},
+	"type": "module",
+	"main": "./release/main.js",
+	"typings": "./release/main.d.ts",
+	"scripts": {
+		"benchmark": "node benchmark/benchmark.js",
+		"bundle": "webpack",
+		"compile": "tsc",
+		"inspect": "node out/tests/inspect.js",
+		"prepublishOnly": "TypeScriptESBuild 'Source/**/*.ts'",
+		"tmconvert": "node scripts/tmconvert.js",
+		"version": "npm run compile && npm run test",
+		"postversion": "git push && git push --tags",
+		"watch": "tsc --watch"
+	},
+	"devDependencies": {
+		"@types/mocha": "^9.1.0",
+		"@types/node": "^16.6.1",
+		"copy-webpack-plugin": "^9.1.0",
+		"mocha": "^9.2.2",
+		"typescript": "^4.3.5",
+		"typescript-esbuild": "latest",
+		"vscode-oniguruma": "^1.5.1",
+		"webpack": "^5.50.0",
+		"webpack-cli": "^4.8.0"
+	},
+	"publishConfig": {
+		"access": "public"
+	}
 }
