--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
 		"postversion": "git push && git push --tags"
 	},
 	"devDependencies": {
-		"@types/node": "^16.6.1"
+		"@types/node": "16.6.1"
 	}
 }
