--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "bundle": "webpack"
   },
   "devDependencies": {
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^16.6.1",
-    "copy-webpack-plugin": "^9.1.0",
-    "mocha": "^9.2.2",
-    "typescript": "^4.3.5",
-    "vscode-oniguruma": "^1.5.1",
-    "webpack": "^5.50.0",
-    "webpack-cli": "^4.8.0"
+    "@types/mocha": "10.0.6",
+    "@types/node": "20.14.5",
+    "copy-webpack-plugin": "12.0.2",
+    "mocha": "10.4.0",
+    "typescript": "5.4.5",
+    "vscode-oniguruma": "2.0.1",
+    "webpack": "5.92.0",
+    "webpack-cli": "5.1.4"
   }
 }
