--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"description": "VSCode TextMate grammar helpers",
 	"devDependencies": {
-		"@types/node": "^16.6.1"
+		"@types/node": "22.6.0"
 	},
 	"main": "./release/main.js",
 	"name": "vscode-textmate",
