--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	},
 	"dependencies": {},
 	"devDependencies": {
-		"@types/node": "^22.10.5",
-		"mkdirp": "^3.0.1"
+		"@types/node": "22.10.5",
+		"mkdirp": "3.0.1"
 	}
 }
